--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
      </div>
      <div class="main-content">
 <div class="vehicle-list">
-  <h2>Vehicle List</h2>
+  <h2> <span class="word1">Vehicle</span>
+    <span class="word2">List</span></h2>
   <div class="vehicle-table">
     <table>
       <thead>
@@ -87,7 +88,7 @@
   <a href="#" class="next">Next &raquo;</a>
 </div>
 
-...
+
 
 <div class="vehicle-drawer" id="vehicle-drawer">
 <div class="vehicle-drawer-content">
