--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>MY WEBSITE</title>
-    <link rel="stylesheet" href="dettt.css">
+    <link rel="stylesheet" href="vehicle.css">
   </head>
   <body>
 
@@ -175,6 +175,6 @@
 
 
 </div>
-   <script src="d.js"></script>
+   <script src="function.js"></script>
  </body>
 </html>
